# crates

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: bench.yaml  check.yaml
benches/: single_thread.rs
crates/ean13/: Cargo.toml  README.md
crates/ean13/src/: lib.rs
crates/isrc/: Cargo.toml  README.md
crates/isrc/src/: lib.rs
crates/lazycsv/: Cargo.toml  README.md
crates/lazycsv/src/: lib.rs
crates/lazycsv/tests/: main.rs
crates/upc-a/: Cargo.toml  README.md
crates/upc-a/src/: lib.rs
dev/bench/: data.js  index.html
src/: lib.rs
