[package]
name = "lazycsv"
version = "0.1.0"
authors = ["Iha Shin <me@xiniha.dev>", "Jihyeon Kim <simnalamburt@gmail.com>"]
edition = "2021"
description = """
Vectorized, lazy-decoding, zero-copy CSV parser.
"""
repository = "https://github.com/contentstech-com/lazycsv"
license = "Apache-2.0 OR MIT"
keywords = ["csv", "simd", "zero-copy", "lazy", "parser"]
categories = ["no-std", "no-std::no-alloc", "parsing"]

[features]
default = ["std"]

# The 'std' feature permits the lazycsv crate to use the standard library. This
# permits memchr to use runtime CPU feature detection to automatically
# accelerate searching via vector instructions. Without the standard library,
# this automatic detection is not possible.
std = ["alloc", "memchr/std", "thiserror/std"]

# The 'alloc' feature enables some APIs that require allocation, such as
# 'Cell::try_as_str'. Note that this feature does not enable runtime CPU feature
# detection. That still requires 'std'.
alloc = []

[dependencies]
memchr = { version = "2.7.4", default-features = false }
thiserror = { version = "2.0.11", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.1"
memmap2 = "0.9.5"

[[bench]]
name = "single_thread"
harness = false
