[package]
name = "ean13"
version = "0.1.0"
description = "UPC-A (Universal Product Code) parser library."
keywords = ["upc", "parser"]
categories = ["no-std", "no-std::no-alloc", "parsing"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]

std = ["alloc", "bitcode?/std", "serde?/std", "thiserror/std"]

alloc = ["serde?/alloc"]

bitcode = ["dep:bitcode"]

serde = ["dep:serde"]

[dependencies]
bitcode = { version = "0.6", default-features = false, features = ["derive"], optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.97", default-features = false }
bincode = "1.3.3"
serde_json = "1.0.140"
toml = "0.8.20"
