[package]
name = "isrc"
version = "0.1.2"
description = "ISRC (International Standard Recording Code) parser library."
keywords = ["isrc", "parser"]
categories = ["no-std", "no-std::no-alloc", "parsing"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]

std = ["alloc", "bitcode?/std", "serde?/std", "thiserror/std"]

alloc = ["serde?/alloc"]

bitcode = ["dep:bitcode"]

serde = ["dep:serde", "dep:heapless"]

[dependencies]
bitcode = { version = "0.6", default-features = false, features = ["derive"], optional = true }
heapless = { version = "0.8.0", features = ["serde"], optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.97", default-features = false }
bincode = "1.3.3"
heapless = { version = "0.8.0", default-features = false }
serde_json = "1.0.140"
toml = "0.8.20"
